SERVER-22335: only prepare getmore when needed in bgsync fetcher